Initialize [[SinkId]] to "".

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <ol>
       <li>
         <p>Let the element have a <dfn>[[\SinkId]]</dfn> internal slot,
-        initialized to <code>null</code>.
+        initialized to <code>""</code>.
       </li>
     </ol>
     <div>
