--- a/index.html
+++ b/index.html
@@ -228,6 +228,65 @@
       </section>
     </section>
   </section>
+  <section id="mediadevices-extensions">
+    <h2><a><code>MediaDevices</code></a> Extensions</h2>
+    <p>This section specifies additions to the <dfn
+    data-cite="!GETUSERMEDIA#dom-mediadevices"><code>
+    MediaDevices</code></dfn> when the Audio Output Devices API is
+    supported.</p>
+    <div>
+      <pre class="idl">
+      partial interface MediaDevices {
+        Promise&lt;MediaDeviceInfo&gt; requestAudioOutputDevice ();
+      };
+      </pre>
+      <section>
+        <h2>Methods</h2>
+        <!-- Update section to use links to promise resolve/reject spec, permission spec... -->
+        <dl data-link-for="MediaDevices" data-dfn-for="MediaDevices"
+        class="method">
+          <dt><dfn><code>requestAudioOutputDevice</code></dfn></dt>
+          <dd>
+            <p>Prompts the user to select a specific audio output device.</p>
+            <p>When the <code>requestAudioOutputDevice</code> method is called,
+            the User Agent MUST run the following steps:</p>
+            <ol>
+              <li><p>If the method call is not <a
+              href="https://html.spec.whatwg.org/multipage/interaction.html#triggered-by-user-activation">
+              triggered by user activation</a>,
+              return a promise rejected with a <code>DOMException</code< object whose
+              <code>name</code> attribute has the value <code>InvalidStateError</code>.
+              </p></li>
+              <li><p>Let <var>p</var> be a new promise.</p></li>
+              <li>
+                <p>Run the followng steps in parallel:</p>
+                <ol>
+                  <li><p>Probe the User Agent for available audio output devices.</p></li>
+                  <li><p>If there is no audio output devices, reject
+                  <var>p</var> with a new <code>DOMException</code> whose <code>name</code> attribute
+                  has the value <code>NotFoundError</code>.</p></li>
+                  <li><p>Prompt the user to choose an audio output device, with a PermissionDescriptor named "speaker".</p></li>
+                  <li><p>If the result of the request is "denied", reject
+                    <var>p</var> with a new <code>DOMException</code> whose <code>name</code> attribute
+                    has the value <code>NotAllowedError</code> and abort these steps.</p></li>
+                  <li><p>Let <var>deviceInfo</var> be a new <code>MediaDeviceInfo</code> object to represent the selected audio output device.</p></li>
+                  <li><p>Update <var>deviceInfo</var> as done by the <a href="">enumerateDevices</a> algorithm steps 2.5.4 and 2.5.5.</p></li>
+                  <li><p>Resolve <var>p</var> with <var>deviceInfo</var>.</p></li>
+                </ol>
+              </li>
+              <li><p>Return <var>p</var>.</p></li>
+            </ol>
+            <p>Once a device is exposed after a call to <code>requestAudioOutputDevice</code>, it MUST be listed by
+            <dfn data-cite="!GETUSERMEDIA#dom-mediadevices-enumeratedevices"><code>enumeratedevices</code></dfn>.</p>
+            <p>If the promise returned by <code>requestAudioOutputDevice</code> is resolved,
+            user activation is enabled when executing the promise fulfillment handlers.
+            This allows starting to play audio or calling <code>setSinkId</code> synchronously
+            within these fulfillment handlers without any additional user gesture needed.</p>
+          </dd>
+        </dl>
+      </section>
+    </div>
+  </section>
   <section id="privacy-considerations">
     <h2>Privacy Considerations</h2>
     <section id="privacy-consent">
