--- a/index.html
+++ b/index.html
@@ -237,18 +237,18 @@
     <div>
       <pre class="idl">
       partial interface MediaDevices {
-        Promise&lt;MediaDeviceInfo&gt; requestAudioOutputDevice ();
+        Promise&lt;MediaDeviceInfo&gt; selectAudioOutput();
       };
       </pre>
       <section>
         <h2>Methods</h2>
-        <!-- Update section to use links to promise resolve/reject spec, permission spec... -->
+        <!-- FIXME: Update section to use links to promise resolve/reject spec, permission spec... -->
         <dl data-link-for="MediaDevices" data-dfn-for="MediaDevices"
         class="method">
-          <dt><dfn><code>requestAudioOutputDevice</code></dfn></dt>
+          <dt><dfn><code>selectAudioOutput</code></dfn></dt>
           <dd>
             <p>Prompts the user to select a specific audio output device.</p>
-            <p>When the <code>requestAudioOutputDevice</code> method is called,
+            <p>When the <code>selectAudioOutput</code> method is called,
             the User Agent MUST run the following steps:</p>
             <ol>
               <li><p>If the method call is not <a
@@ -259,10 +259,10 @@
               </p></li>
               <li><p>Let <var>p</var> be a new promise.</p></li>
               <li>
-                <p>Run the followng steps in parallel:</p>
+                <p>Run the following steps in parallel:</p>
                 <ol>
                   <li><p>Probe the User Agent for available audio output devices.</p></li>
-                  <li><p>If there is no audio output devices, reject
+                  <li><p>If there is no audio output device, reject
                   <var>p</var> with a new <code>DOMException</code> whose <code>name</code> attribute
                   has the value <code>NotFoundError</code>.</p></li>
                   <li><p>Prompt the user to choose an audio output device, with a PermissionDescriptor named "speaker".</p></li>
@@ -270,16 +270,16 @@
                     <var>p</var> with a new <code>DOMException</code> whose <code>name</code> attribute
                     has the value <code>NotAllowedError</code> and abort these steps.</p></li>
                   <li><p>Let <var>deviceInfo</var> be a new <code>MediaDeviceInfo</code> object to represent the selected audio output device.</p></li>
-                  <li><p>Update <var>deviceInfo</var> as done by the
-                  <code>enumeratedevices</code> algorithm steps 2.5.4 and 2.5.5.</p></li>
                   <li><p>Resolve <var>p</var> with <var>deviceInfo</var>.</p></li>
                 </ol>
               </li>
               <li><p>Return <var>p</var>.</p></li>
             </ol>
-            <p>Once a device is exposed after a call to <code>requestAudioOutputDevice</code>, it MUST be listed by
-            <code>enumeratedevices</code>.</p>
-            <p>If the promise returned by <code>requestAudioOutputDevice</code> is resolved,
+            <!-- FIXME: Introduce necessary hooks to expose a device in mediacapture main spec
+            and use it as a specific step in above algorithm. -->
+            <p>Once a device is exposed after a call to <code>selectAudioOutput</code>, it MUST be listed by
+            <code>enumeratedevices</code> for the current browsing context.</p>
+            <p>If the promise returned by <code>selectAudioOutput</code> is resolved,
             user activation is enabled when executing the promise fulfillment handlers.
             This allows starting to play audio or calling <code>setSinkId</code> synchronously
             within these fulfillment handlers without any additional user gesture needed.</p>
@@ -313,11 +313,10 @@
     <section id="privacy-obtaining-consent">
       <h3>Obtaining Consent</h3>
       <p>The user agent may explicitly obtain user consent to play audio out of
-      non-default output devices; the details of this process are left to the
-      implementation. For example, one approach could be to add an explicit
-      user prompt of the form "example.com wants to access all your sound
-      output devices".</p>
-      <p>However, implementations MUST support implicit consent via the
+      non-default output devices using <code>selectAudioOutput</code>.</p>
+      <!-- FIXME: Introduce necessary hooks in mediacapture-main spec to expose
+      audio output devices attached to the same device as microphone being used to capture. -->
+      <p>Implementations MUST also support implicit consent via the
       <dfn data-cite="!GETUSERMEDIA#dom-mediadevices-getusermedia">
       <code>getUserMedia()</code></dfn> permission prompt; when an audio input
       device is permitted and opened via <a><code>
