fix enumerateDevices case

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             <!-- FIXME: Introduce necessary hooks to expose a device in mediacapture main spec
             and use it as a specific step in above algorithm. -->
             <p>Once a device is exposed after a call to <code>selectAudioOutput</code>, it MUST be listed by
-            <code>enumeratedevices</code> for the current browsing context.</p>
+            <code>enumerateDevices</code> for the current browsing context.</p>
             <p>If the promise returned by <code>selectAudioOutput</code> is resolved,
             user activation is enabled when executing the promise fulfillment handlers.
             This allows starting to play audio or calling <code>setSinkId</code> synchronously
