--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <p>If <var>document</var> is not
                 <a data-cite="!HTML/iframe-embed-object.html#allowed-to-use">
                 allowed to use</a> the feature identified by
-                <a data-dfn-link-for="">"speaker"</a>, return a promise rejected
+                <a data-dfn-link-for="">"speaker-selection"</a>, return a promise rejected
                 with a new
                 <a data-cite="WEBIDL#idl-DOMException"><code>DOMException</code></a>
                 whose name is
