Remove cut'n'paste error.

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
             <h2>Dictionary <dfn>AudioOutputOptions</dfn> Members</h2>
             <dl data-link-for="AudioOutputOptions" data-dfn-for="AudioOutputOptions"
             class="dictionary-members">
-              <dt data-tests="RTCPeerConnection-restartIce.https.html"><dfn data-idl>deviceId</dfn> of type <span class=
+              <dt><dfn data-idl>deviceId</dfn> of type <span class=
                 "idlMemberType">DOMString</span>, defaulting to
               <code>""</code></dt>
               <dd>
