Fix wording around which id to resolve with.

--- a/index.html
+++ b/index.html
@@ -296,7 +296,8 @@
                       <li>
                         <p>Let <var>device</var> be the device identified by <var>deviceId</var>.</p>
                       </li>
-                      <li><p>Resolve <var>p</var> with either <var>deviceInfo</var> and abort all steps.</p></li>
+                      <li><p>Resolve <var>p</var> with either <var>deviceId</var> or a freshly
+                      rotated deviceId for <var>device</var>, and abort all steps.</p></li>
                     </ol>
                   </li>
                   <li><p><a data-cite="PERMISSIONS#prompt-the-user-to-choose">
