--- a/index.html
+++ b/index.html
@@ -282,27 +282,44 @@
               <li>
                 <p>Run the following steps in parallel:</p>
                 <ol>
+                  <li><p>Let <var>descriptor</var> be a PermissionDescriptor named
+                    <code>"speaker-selection"</code>.</p>
+                  </li>
+                  <li>
+                    <p>If <var>descriptor</var>'s
+                    <a data-cite="PERMISSIONS/#dom-permissionstate"
+                      >permission state</a> is
+                    <a data-cite="PERMISSIONS/#dom-permissionstate-granted"
+                      ><code>"denied"</code></a>, reject
+                      <var>p</var> with a new <code>DOMException</code> whose
+                      <code>name</code> attribute has the value
+                    <code>NotAllowedError</code> and abort these steps.</p>
+                  </li>
                   <li><p>Probe the User Agent for available audio output devices.</p></li>
                   <li><p>If there is no audio output device, reject
                   <var>p</var> with a new <code>DOMException</code> whose <code>name</code> attribute
                   has the value <code>NotFoundError</code>.</p></li>
                   <li>
-                    <p>If <var>deviceId</code> is not <code>""</code>, and
-                    matches an id previously exposed by
+                    <p class="fingerprint">If <var>deviceId</code> is not
+                    <code>""</code> and matches an id previously exposed by
                     <code>selectAudioOutput</code> in an earlier browsing
-                    session, the user agent MAY decide to run the following
-                    sub steps:</p>
+                    session, the user agent MAY decide, based on its previous
+                    decision of whether to persist this id or not for this set
+                    of origins, to run the following sub steps:</p>
                     <ol>
                       <li>
-                        <p>Let <var>device</var> be the device identified by <var>deviceId</var>.</p>
+                        <p>Let <var>device</var> be the device identified by
+                        <var>deviceId</var>.</p>
                       </li>
-                      <li><p>Resolve <var>p</var> with either <var>deviceId</var> or a freshly
-                      rotated deviceId for <var>device</var>, and abort all steps.</p></li>
+                      <li><p>If <var>device</var> is available, resolve
+                      <var>p</var> with either <var>deviceId</var> or a freshly
+                      rotated deviceId for <var>device</var>, and abort the
+                      in-parallel steps.</p></li>
                     </ol>
                   </li>
                   <li><p><a data-cite="PERMISSIONS#prompt-the-user-to-choose">
-                  Prompt the user to choose</a> an audio output device, with a PermissionDescriptor
-                  named <code>"speaker-selection"</code>.</p></li>
+                  Prompt the user to choose</a> an audio output device, with
+                  <var>descriptor</var>.</p></li>
                   <li><p>If the result of the request is "denied", reject
                     <var>p</var> with a new <code>DOMException</code> whose <code>name</code> attribute
                     has the value <code>NotAllowedError</code> and abort these steps.</p></li>
