--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                   </li>
                   <li>
                     <p>If <var>descriptor</var>'s
-                    <a data-cite="PERMISSIONS/#dom-permissionstate"
+                    <a data-cite="PERMISSIONS/#permission-state"
                       >permission state</a> is
                     <a data-cite="PERMISSIONS/#dom-permissionstate-granted"
                       ><code>"denied"</code></a>, reject
